--- a/project/static/staffadmin/dashboard.css
+++ b/project/static/staffadmin/dashboard.css
@@ -38,8 +38,12 @@
     justify-content: space-between;
     height: 150px;
     width: 100%;
+    flex-wrap: nowrap; 
+    gap: 16px;
 }
 .stats {
+    
+    min-width: 220px; 
     position: relative;
     height: 150px;
     width: 20%;
@@ -108,36 +112,45 @@
 }
 
 .diagram-container{
+    height: 450px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    width: 95%;
-    height: 75% !important;
-    border: 1px solid red;
+    justify-content: space-between;
+    gap: 24px;
+    width: 96%;
+    margin: 0 auto;
+}
+.diagram-container .days-info,
+.diagram-container .classes-info{
+    position: relative;
+    border-radius: 14px;
 }
 
-.diagram-container .days-info {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    height: 100%;
-    width: 60%;
-}
-
-.diagram-container h4{
+.diagram-container .days-info h4,
+.diagram-container .classes-info h4{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -100%); 
+    text-align: center;
     font-weight: 700;
     color: var(--icon-color);
 }
-.diagram-container canvas{
+
+.diagram-container .days-info canvas{
     width: 100%;
-    height: 85% !important;
+    height: 320px;
+}
+.diagram-container .classes-info canvas{
+    width: 40%;
+    gap: 20px;
+    height: 320px;
 }
 
 @media (max-width: 768px) {
     .extra-actions .btn {
         margin-top: 80px;
-        margin-left: 10px;
+        margin-left: 30px;
     }
     .extra-actions {
         width: 100%;
@@ -146,3 +159,54 @@
         align-items: center;
     }
 }
+
+@media (max-width: 1100px){
+    .stats-container{
+        margin-top: 30px;
+        flex-wrap: wrap;              
+        justify-content: center;
+        height: auto;                 
+        padding: 0 16px;
+    }
+    .stats{
+        width: 320px;                 
+        height: 150px;
+    }
+    .diagram-container .days-info h4{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -120%); 
+        text-align: center;
+        font-weight: 700;
+        color: var(--icon-color);
+        font-size: 16px;
+    }
+    .diagram-container{
+        margin-top: 50px;
+        gap: 30px;
+        flex-wrap: wrap;              
+        height: auto;
+        justify-content: center;
+        padding: 0 10px;
+    }
+    .diagram-container .days-info{
+        max-height: 600px;
+        width: 100%;
+        max-width: 900px;
+    }
+    .diagram-container .classes-info{
+        width: 100%;
+        max-width: 300px;
+    }
+    
+    .diagram-container .days-info canvas{
+        width: 100% !important;
+        height: auto !important;
+    }
+    .diagram-container .classes-info canvas{
+        width: 100% !important;
+        height: 280px !important;
+    }
+}
+
