--- a/project/static/staffadmin/dashboard.css
+++ b/project/static/staffadmin/dashboard.css
@@ -142,9 +142,32 @@
     height: 320px;
 }
 .diagram-container .classes-info canvas{
-    width: 40%;
+    width: 50%;
     gap: 20px;
     height: 320px;
+}
+.diagram-container-max{
+    height: 400px;
+    gap: 24px;
+    width: 96%;
+    margin: 0 auto;
+}
+.diagram-container-max .classes-info{
+    position: relative;
+}
+.diagram-container-max .classes-info canvas{
+    
+    height: 400px !important;
+    width: 600px;
+}
+.diagram-container-max .classes-info h4{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -100%); 
+    text-align: center;
+    font-weight: 700;
+    color: var(--icon-color);
 }
 
 @media (max-width: 768px) {
