Added telegram bot controlling panel and writed some filter for filter school admins and school channels

--- a/project/templates/staffadmin/index.html
+++ b/project/templates/staffadmin/index.html
@@ -54,7 +54,7 @@
   </div>
 
   <div class="diagram-container">
-    <div class="days-info" style="height:320px;">
+    <div class="days-info" style="height:350px; width:800px;">
       <h4>Oylik kelmaganlar tahlili</h4>
       <canvas id="attendanceLineChart" class="diagram"></canvas>
     </div>
@@ -84,4 +84,5 @@
   <script src="{% static 'staffadmin/dashboard.js' %}"></script>
 
 </div>
+{{ block.super }}
 {% endblock %}
